[package]
name = "netdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
ctrlc = "3.4.1"
futures = "0.3.29"
libbpf-rs = "0.21.2"
libbpf-sys = "1.2.1"
netlink-packet-route = "0.17.1"
rtnetlink = "0.13.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
libbpf-cargo = "0.21"
